Criação da estrutura básica do HTML

--- a/index.html
+++ b/index.html
@@ -3,8 +3,41 @@
 <head>
 <meta charset="UTF-8">
 <title>CIPA Assessoria</title>
+<link href="estilo.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+<header>
+	<h1 id="logo">CIPA Assessoria</h1>
+	<nav>
+		<ul>
+			<li><a href="">Início</a></li>
+			<li><a href="">CIPA</a></li>
+			<li><a href="">Serviços</a></li>
+			<li><a href="">Contato</a></li>
+		</ul>
+	</nav>
+	<article id="banner"></article>
+</header>
+<article id="servicos">
+	<section class="servico">nome do serviço</section>
+	<section class="servico">nome do serviço</section>
+	<section class="servico">nome do serviço</section>
+	<section class="servico">nome do serviço</section>
+</article>
+<article id="chamadaPrincipal">
+	<h1>Bem vindo(a)!</h1>
+	<h2>Conheça um pouco sobre o que a CIPA Assessoria pode fazer por você e sua empresa</h2>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, ullam, rerum unde eligendi dolor rem voluptatibus laboriosam beatae delectus recusandae eius minus quidem enim dolorem eaque molestias voluptate nam incidunt!</p>
+</article>
+<footer>
+	<section id="diretos">
+		<h1>CIPA Assessoria</h1>
+		<p>CIPA Assessoria LTDA</p>
+		<p>Todos os Direitos Reservados (C) 2015</p>
+	</section>
+	<section id="dados"></section>
+    <section id="creditos"></section>
+</footer>
 </body>
 </html>
