Menu superior funcionando

--- a/index.html
+++ b/index.html
@@ -36,8 +36,18 @@
 		<p>CIPA Assessoria LTDA</p>
 		<p>Todos os Direitos Reservados (C) 2015</p>
 	</section>
-	<section id="dados"></section>
-    <section id="creditos"></section>
+	<section id="dados">
+    		<h1>(64) 3623-1127</h1>
+        <h2>8405-7288 / 9907-4230</h2>
+        <br>
+        <p>cipaassessoria@bol.com.br</p>
+        <p>Rua 12, 929 - Jardim América</p>
+        <p>Rio Verde - GO</p>
+    </section>
+    <section id="creditos">
+    		<p>Desenvolvido por:</p>
+        <h1>Studio M Tecnologia Web LTDA</h1>
+    </section>
 </footer>
 </body>
 </html>
