Estrutura html/css do topo

--- a/index.html
+++ b/index.html
@@ -11,13 +11,23 @@
 	<h1 id="logo">CIPA Assessoria</h1>
 	<nav>
 		<ul>
-			<li><a href="">Início</a></li>
+			<li class="ativo"><a href="">Início</a></li>
 			<li><a href="">CIPA</a></li>
 			<li><a href="">Serviços</a></li>
 			<li><a href="">Contato</a></li>
 		</ul>
 	</nav>
-	<article id="banner"></article>
+	<article id="banner"> 
+    		<a href="#"><img src="images/seta-banner-1.png"></a>
+        <ul id="lista-banner">
+   		    <li><img src="http://www.lorempixel.com/800/350/city/1" alt=""></li>
+            <li><img src="http://www.lorempixel.com/800/350/city/2" alt=""></li>
+            <li><img src="http://www.lorempixel.com/800/350/city/3" alt=""></li>
+            <li><img src="http://www.lorempixel.com/800/350/city/4" alt=""></li>
+            <li><img src="http://www.lorempixel.com/800/350/city/5" alt=""></li>
+        </ul>
+        <a href="#"><img src="images/seta-banner-2.png"></a>
+    </article>
 </header>
 <article id="servicos">
 	<section class="servico">nome do serviço</section>
