--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>CIPA Assessoria</title>
 <link href="estilo.css" rel="stylesheet" type="text/css">
+<script src="js/banner.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -18,15 +19,11 @@
 		</ul>
 	</nav>
 	<article id="banner"> 
-    		<a href="#"><img src="images/seta-banner-1.png"></a>
+    		<a href="#" onClick="Banner.anterior()"><img src="images/seta-banner-1.png"></a>
         <ul id="lista-banner">
-   		    <li><img src="http://www.lorempixel.com/800/350/city/1" alt=""></li>
-            <li><img src="http://www.lorempixel.com/800/350/city/2" alt=""></li>
-            <li><img src="http://www.lorempixel.com/800/350/city/3" alt=""></li>
-            <li><img src="http://www.lorempixel.com/800/350/city/4" alt=""></li>
-            <li><img src="http://www.lorempixel.com/800/350/city/5" alt=""></li>
+        		Qualquer coisa
         </ul>
-        <a href="#"><img src="images/seta-banner-2.png"></a>
+        <a href="#" onClick="Banner.proximo()"><img src="images/seta-banner-2.png"></a>
     </article>
 </header>
 <article id="servicos">
@@ -59,5 +56,15 @@
         <h1>Studio M Tecnologia Web LTDA</h1>
     </section>
 </footer>
+<script type="text/javascript">
+	Banner.setImagens("http://www.lorempixel.com/800/350/city/1");
+	Banner.setImagens("http://www.lorempixel.com/800/350/city/2");
+	Banner.setImagens("http://www.lorempixel.com/800/350/city/3");
+	Banner.setImagens("http://www.lorempixel.com/800/350/city/4");
+	Banner.setImagens("http://www.lorempixel.com/800/350/city/5");
+	
+	Banner.setFrame("lista-banner");
+	Banner.carrega();
+</script>
 </body>
 </html>
